feat: Enhance clipboard URL handling with media dialog support and add unit tests